# ubiquitous-palm-tree

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  td_env.yaml.template  teradata_DBQLSummaryTable_History.ipynb  teradata_connection_demo.ipynb  teradata_databasespace.ipynb  teradata_pdcrinfo.ipynb  teradata_spoolspace.ipynb  teradata_tablespace.ipynb  test.ipynb  test.py
.github/: .copilot.yml  SETUP_SUMMARY.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  copilot_agent_task.md  feature_request.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-agent.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-pdcrinfo-utilities.md
specs/001-pdcrinfo-helper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pdcrinfo-helper/checklists/: requirements.md
specs/001-pdcrinfo-helper/contracts/: pdcrinfo-helper.yaml
src/: __init__.py  connection.py  reports.py
tests/: __init__.py  test_connection.py  test_reports.py
